@@ -21,6 +21,7 @@
    USE io_module,            ONLY : stdout, stdin
    USE io_module,            ONLY : prefix, postfix, work_dir
    USE io_module,            ONLY : datafile_dft => dftdata_file, datafile_sgm
+   USE control_module,       ONLY : debug_level, use_debug_mode
    USE correlation_module,   ONLY : lhave_sgm
    USE timing_module,        ONLY : timing
    USE log_module,           ONLY : log_push, log_pop
@@ -52,7 +53,7 @@
    ! input namelist
    !
    NAMELIST /INPUT/ prefix, postfix, work_dir, datafile_dft, datafile_sgm, &
-                    nk, s, delta, smearing_type, fileout, &
+                    nk, s, delta, smearing_type, fileout, debug_level,     &
                     emin, emax, ne, ircut, projdos, nprint
    !
    ! end of declariations
@@ -108,7 +109,7 @@ CONTAINS
    ! Read INPUT namelist from stdin
    !
    USE mp,                   ONLY : mp_bcast
-   USE io_module,            ONLY : ionode, ionode_id
+   USE io_module,            ONLY : io_init, ionode, ionode_id
    !
    IMPLICIT NONE
 
@@ -118,8 +119,8 @@ CONTAINS
       ! end of declarations
       !
 
+
       CALL timing( subname, OPR='start' )
-      CALL log_push( subname )
 
       !
       ! init input namelist
@@ -140,6 +141,7 @@ CONTAINS
       ircut(1:3)                  =  0
       projdos                     = .FALSE.
       nprint                      = 50
+      debug_level                 = 0
       
       CALL input_from_file ( stdin )
       !
@@ -167,12 +169,22 @@ CONTAINS
       CALL mp_bcast( ircut,           ionode_id )      
       CALL mp_bcast( projdos,         ionode_id )      
       CALL mp_bcast( nprint,          ionode_id )      
+      CALL mp_bcast( debug_level,     ionode_id )      
 
       !
       ! Init
       !
       IF ( LEN_TRIM(fileout) == 0 ) &
            fileout = TRIM(work_dir)//'/'//TRIM(prefix)//TRIM(postfix)//'_dos.dat'
+      !
+      use_debug_mode = .FALSE.
+      IF ( debug_level > 0  )     use_debug_mode = .TRUE.
+      !
+      lhave_sgm = .FALSE.
+      IF ( LEN_TRIM(datafile_sgm) > 0 ) lhave_sgm = .TRUE.
+      !
+      CALL io_init( NEED_WFC=.FALSE. )
+
 
       !
       ! Some checks 
@@ -185,9 +197,6 @@ CONTAINS
       IF ( ne <= 0  )             CALL errore(subname, 'Invalid ne', 4)
       IF ( ANY( ircut(:) < 0 ) )  CALL errore(subname, 'Invalid ircut', 10)
       IF ( nprint <= 0  )         CALL errore(subname, 'invalid nprint', 5)
-      !
-      lhave_sgm = .FALSE.
-      IF ( LEN_TRIM(datafile_sgm) > 0 ) lhave_sgm = .TRUE.
       !
       nkpts_int = PRODUCT( nk(1:3) )
       IF ( ANY( nk(:) <= 0 ) ) CALL  errore(subname, 'invalid nk', 71) 
@@ -233,7 +242,6 @@ CONTAINS
       ENDIF
 
       CALL timing(subname,OPR='stop')
-      CALL log_pop(subname)
       !
    END SUBROUTINE dos_input
    !
